# NoisyRobotCLTrust

./: .gitignore  NOTES.txt  README.md
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.dsv  package.sh  package.xml
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/backups/: old_marker_pub.cpp  old_marker_pub2.cpp  old_real_controller.cpp  old_traj_recorder.py  open3d_ros_helper.py  points_and_lines.cpp  test_params.py
ros2_ws/src/cpp_pubsub/backups/trajectory_code/: live_plotting.py  sine.py
ros2_ws/src/cpp_pubsub/cpp_pubsub/: data_logger.py  exp_params.py  traj_utils.py
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part0/: part0_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial3.csv  trial30.csv  trial31.csv  trial32.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part1/: part1_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial2.csv  trial21.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial29.csv  trial3.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part10/: part10_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial30.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part11/: part11_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial3.csv  trial30.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part12/: part12_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial3.csv  trial30.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part13/: part13_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial3.csv  trial30.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part14/: part14_header.csv  trial1.csv  trial11.csv  trial12.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial29.csv  trial3.csv  trial30.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part15/: part15_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial3.csv  trial30.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part16/: part16_header.csv  trial1.csv  trial10.csv  trial11.csv  trial12.csv  trial13.csv  trial14.csv  trial15.csv  trial16.csv  trial17.csv  trial18.csv  trial19.csv  trial2.csv  trial20.csv  trial21.csv  trial22.csv  trial23.csv  trial24.csv  trial25.csv  trial26.csv  trial27.csv  trial28.csv  trial29.csv  trial3.csv  trial30.csv  trial4.csv  trial5.csv  trial6.csv  trial7.csv  trial8.csv  trial9.csv
ros2_ws/src/cpp_pubsub/data_logging/csv_logs/part17/: part17_header.csv  trial1.csv  trial10.csv  trial11.csv  (+27 more)
ros2_ws/src/cpp_pubsub/launch/: controller.launch.py  gazebo.launch.py  real.launch.py  rviz.launch.py  test.launch.py
ros2_ws/src/cpp_pubsub/robot_noise/: generate_noise.py  interpolation.py  old_generate_noise.py  plot_candidates.ipynb  plot_candidates.py  plot_noise_files.py  plot_selected.ipynb
ros2_ws/src/cpp_pubsub/robot_noise/candidate_noise/: noise1.csv  noise10.csv  noise2.csv  noise3.csv  noise4.csv  noise5.csv  noise6.csv  noise7.csv  noise8.csv  noise9.csv
ros2_ws/src/cpp_pubsub/robot_noise/noise_csv_files/: noise1.csv  noise10.csv  noise2.csv  noise3.csv  noise4.csv  noise5.csv  noise6.csv  noise7.csv  noise8.csv  noise9.csv
ros2_ws/src/cpp_pubsub/scripts/: basic_subscriber.py  const_br.py  data_logger.py  data_plotter.py  gazebo_controller.py  ik_sub.py  joint_controller.py  pcl_publisher.py  plot_test_data.py  tobii_test.py  traj_recorder.py
ros2_ws/src/cpp_pubsub/scripts/rhythm/: tapping.py
ros2_ws/src/cpp_pubsub/scripts/trajectory_code/: circle.py
ros2_ws/src/cpp_pubsub/scripts/unused/: gaussian_noise.py  ik_sub.py  plot_test_data.py
ros2_ws/src/cpp_pubsub/spiral_files/: spiral_marker_publisher.cpp  spiral_position_talker.cpp  spiral_real_controller.cpp
ros2_ws/src/cpp_pubsub/src/: backup.cpp  cartesian_controller.cpp  const_br.cpp  encoder_publisher.cpp  gazebo_controller.cpp  marker_publisher.cpp  position_publisher.cpp  position_talker.cpp  real_controller.cpp
(+2101 files in other folders)
