<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>Examples of minimal publisher/subscriber using rclcpp</description>
  <maintainer email="michael.pan31415@gmail.com">michael</maintainer>
  <license>Apache License 2.0</license>

  <!-- <exec_depend>rclpy</exec_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>tutorial_interfaces</exec_depend>
  <!-- <exec_depend>builtin_interfaces</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>

    <depend>std_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>kdl_parser</depend>

    <depend>python3-numpy</depend>
    <depend>tf2_ros_py</depend>

    <depend>scipy</depend>
    <depend>kinpy</depend>
    <depend>dhd</depend>
    <depend>drd</depend>
  </export>
  
</package>
